realtime: WS prices with HTTP fallback + backoff + env polling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-# Rename to .env and fill in your real values (do NOT commit .env)
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+# Frontend config (Vite reads these at build time)
+# Poll interval used ONLY when WebSocket fallback to HTTP is active.
+# You can set this in Netlify → Site configuration → Environment variables too.
+VITE_POLL_MS=3000
