netlify: add functions + config

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Frontend config (Vite reads these at build time)
-# Poll interval used ONLY when WebSocket fallback to HTTP is active.
-# You can set this in Netlify → Site configuration → Environment variables too.
-VITE_POLL_MS=3000
+# PUBLIC (frontend)
+VITE_SUPABASE_URL=https://YOUR-PROJECT-ID.supabase.co
+VITE_SUPABASE_KEY=YOUR_SUPABASE_ANON_PUBLIC_KEY
+VITE_ENABLE_TRADING=false
+
+# SERVER-ONLY (Netlify Functions)
+SUPABASE_URL=https://YOUR-PROJECT-ID.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
