--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "npm run build"
   publish = "dist"
 
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
+[dev]
+  command = "npm run dev -- --port 5173 --strictPort"
+  targetPort = 5173          # Vite dev server port
+  port = 5180                # Netlify proxy port (what you open in the browser)
+  functionsPort = 9999       # Local Netlify Functions port
+  autoLaunch = false
