--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-<<<<<<< HEAD
     "preview": "vite preview"
-=======
     "preview": "vite preview",
     "prebuild": "bash scripts/dupcheck.sh"
->>>>>>> 0bdf407 (chore: add duplicate-file check to prebuild so it shows in Netlify logs)
+0bdf407 (chore: add duplicate-file check to prebuild so it shows in Netlify logs)
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
@@ -25,8 +23,6 @@
     "netlify-cli": "^23.1.3",
     "vite": "^7.1.2"
   }
-<<<<<<< HEAD
 }
-=======
 }
->>>>>>> 0bdf407 (chore: add duplicate-file check to prebuild so it shows in Netlify logs)
+0bdf407 (chore: add duplicate-file check to prebuild so it shows in Netlify logs)
