--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "forgeofvalhalla-one-shot-full",
+  "name": "forge-of-valhalla",
   "private": true,
-  "version": "0.0.2",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
     "preview": "vite preview",
     "prebuild": "bash scripts/dupcheck.sh"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.54.0",
-    "lightweight-charts": "^5.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1"
+    "@supabase/supabase-js": "^2.45.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.0",
-    "netlify-cli": "^23.1.3",
-    "vite": "^7.1.2"
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
