--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@supabase/supabase-js": "^2.45.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "@latest"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@types/react": "@latest",
-    "@types/react-dom": "@latest",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.4",
-    "vite": "^5.4.3"
+    "vite": "^5.4.3",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22"
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "peerDependencies": {},
+  "optionalDependencies": {},
+  "overrides": {}
 }
