--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "netlify/functions"
 
-[dev]
-  command = "npm run dev -- --port 5173 --strictPort"
-  targetPort = 5173          # Vite dev server port
-  port = 5180                # Netlify proxy port (what you open in the browser)
-  functionsPort = 9999       # Local Netlify Functions port
-  autoLaunch = false
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
