--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/cache": "^11.12.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
+    "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-table": "^8.19.3",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -21,25 +22,24 @@
     "react": "19.0.0",
     "react-apexcharts": "1.4.1",
     "react-calendar": "^5.0.0",
-    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-is": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.0",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "preinstall": "npx npm-force-resolutions"
+    "preinstall": "npx npm-force-resolutions",
+    "dev": "vite"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
@@ -63,9 +63,15 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "anymatch": "^3.1.3",
     "chokidar": "^3.6.0",
+    "connect-history-api-fallback": "^2.0.0",
     "gh-pages": "^6.1.1",
-    "micromatch": "^4.0.7"
+    "micromatch": "^4.0.7",
+    "react-scripts": "^5.0.1",
+    "vite": "^7.1.2"
   }
 }
